# fastapi-postgres-template

./: .env.local  .env.local.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: architecture.md
.github/workflows/: ci.yml
app/config/: settings.py
app/domain/: exceptions.py  types.py
app/domain/billing/: __init__.py
app/domain/billing/invoice/: __init__.py  commands.py  model.py  service.py  validators.py
app/domain/billing/invoice/consumers/: __init__.py  invoice_events.py  payment_requested.py
app/domain/billing/invoice/repo/: base.py  (+4 more)
app/domain/user/: commands.py  diff.py  model.py  service.py  validators.py
app/domain/user/consumers/: __init__.py  user_events.py
app/domain/user/events/: __init__.py  constants.py  user_events.py
app/domain/user/persistence/: __init__.py  queries.py  table.py
app/domain/user/repo/: base.py  create.py  pg.py  sql.py
app/infrastructure/aws/: __init__.py  client.py
app/infrastructure/db/: context.py  exceptions.py  transaction.py  update_mapper.py
app/infrastructure/messaging/: base.py  handler.py
app/infrastructure/messaging/consumer/: __init__.py  base.py  config.py  sqs.py
app/infrastructure/messaging/publisher/: __init__.py  base.py  sns.py
app/infrastructure/postgres/: pool.py  transaction.py
app/infrastructure/sql/: context.py  sqlalchemy_pool.py  transaction.py
app/infrastructure/tasks/: base.py
app/observability/: environment.py  logging.py
app/presentation/: container.py  deps.py  exceptions.py  mapper.py  pagination.py  schemas.py
app/presentation/billing/: __init__.py  routes.py  schema.py
app/presentation/user/: __init__.py  deps.py  routes.py  schema.py
entry/api/: main.py
entry/worker/: main.py
resources/db/migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql
resources/docker/: app.Dockerfile  workspace.Dockerfile
resources/infra/cdk/: cdk.json
resources/scripts/: README.md  migrate.sh  setup_localstack.sh
tests/: conftest.py
tests/domain/: __init__.py
tests/domain/billing/: __init__.py
tests/domain/billing/invoice/: __init__.py  test_service.py
tests/domain/user/: __init__.py  test_service.py
tests/domain/user/consumers/: __init__.py  test_user_events.py
tests/unit/: conftest.py
tests/unit/domain/user/: test_service.py  test_validators.py
(+15 files in other folders)
