[project]
name = "app"
version = "0.1.0"
description = "FastAPI PostgreSQL template with 3-tier architecture"
authors = [
    {name = "Callum Gundlach", email = "gundlachcallum@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings>=2.5.0",
    "asyncpg>=0.29.0",
    "boto3>=1.35.0",
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    "uuid7 (>=0.1.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mypy>=0.10.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-boto3>=1.35.0",
    "asyncpg-stubs>=0.29.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "uuid_extensions",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "asyncpg-stubs (>=0.31.1,<0.32.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mypy (>=1.0.1,<2.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
